Add cookie name

--- a/layouts/partials/base/scripts.html
+++ b/layouts/partials/base/scripts.html
@@ -46,6 +46,7 @@ var SUBMIT_BUTTON = {{.Site.Params.popover.submitbutton}};
 var SUCCESS_MESSAGE = {{.Site.Params.popover.successmessage}};
 var ERROR_MESSAGE = {{.Site.Params.popover.errormessage}};
 var OPTIN = {{.Site.Params.popover.optin}};
+var COOKIE_NAME = {{.Site.Params.popover.cookiename}};
 </script>
 <script src="/js/popover/angular-modal-service.min.js"></script>
 <script src="/js/angular-ismobile.min.js"></script>
