Add data- attribute
Add data- attributer to ng tags to make the html valid.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,6 +9,5 @@
   {{ partial "base/metas" . }}
   {{ partial "base/imports" . }}
 </head>
-<body{{ with .Site.Params.theme }} class="{{ . }}"{{ end }} ng-app="myapp" ng-controller="MyController" ng-mouseleave="MouseLeave($event)">
+<body{{ with .Site.Params.theme }} class="{{ . }}"{{ end }} data-ng-app="myapp" data-ng-controller="MyController" data-ng-mouseleave="MouseLeave($event)">
     {{ partial "base/header" . }}
-  
