Make partials html5 compliant

--- a/layouts/partials/bloc/footer/credits_copyright.html
+++ b/layouts/partials/bloc/footer/credits_copyright.html
@@ -1,5 +1,5 @@
 {{ if ne .Site.Copyright "" }}
 <div class="container copyright">
-  {{ partial "modules/site/copyright" . }}
+    <small>{{ partial "modules/site/copyright" . }}  </small>
 </div>
 {{ end }}
