--- a/layouts/partials/bloc/footer/credits_footline.html
+++ b/layouts/partials/bloc/footer/credits_footline.html
@@ -1,5 +1,5 @@
 {{ if ne .Site.Params.footline "" }}
 <div class="container footline">
-  {{ partial "modules/site/footline" . }}
+    <small>{{ partial "modules/site/footline" . }}</small>
 </div>
 {{ end }}
