--- a/layouts/partials/homepage.html
+++ b/layouts/partials/homepage.html
@@ -16,7 +16,7 @@
         {{ partial "bloc/content/pagination" . }}
       </div>
       {{ if and (isset .Site.Params "showRightSidebar") (eq .Site.Params.showRightSidebar true)}}
-        <div class="col-sm-3">
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
           {{ partial "bloc/content/sidebar" . }}
         </div>
       {{ end }}
