--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,7 +7,7 @@
       {{ .Render "single.boot" }}
     </div>
     {{ if and (isset .Site.Params "showRightSidebar") (eq .Site.Params.showRightSidebar true)}}
-      <div class="col-sm-3">
+      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
         {{ partial "bloc/content/sidebar" .}}
       </div>
     {{ end }}
