--- a/layouts/partials/base/header.html
+++ b/layouts/partials/base/header.html
@@ -8,38 +8,31 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-
-          {{ if and ( ne .Site.Title "" ) ( eq .Site.Params.BrandImage "" )}}
-            <a class="navbar-brand" href="{{.Site.BaseURL}}">
+        {{ if and ( ne .Site.Title "" ) ( eq .Site.Params.BrandImage "" )}}
+        <a class="navbar-brand" href="{{.LanguagePrefix }}">
           {{ .Site.Title }}
           {{ end }}
           {{ if ( ne .Site.Params.BrandImage "" ) }}
-            <a class="navbar-brand-img" href="{{.Site.BaseURL}}">
-          <img alt="{{ .Site.Params.brand }}" src="{{ .Site.Params.BrandImage }}">
+          <a class="navbar-brand-img" href="{{ .Site.BaseURL | relLangURL}}">
+            <img alt="{{ .Site.Params.brand }}" src="{{ .Site.Params.BrandImage }}">
             {{ end }}
-        </a>
+          </a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            {{ $currentNode := . }}
+            {{ range .Site.Menus.main }}
+            <li class="{{if $currentNode.IsMenuCurrent "main" . }}active{{end}}">
 
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
-          {{ range .Site.Data.Menu }}
-          <li>
-
-            <a href="{{ .URL | absURL }}"
-            {{ if and ( isset . "Title" ) ( ne .Title "" ) }} title="{{ .Title }}"{{ end }}>
-
-            {{ if and ( isset . "IconClass" ) ( ne .IconClass "" )  }}
-                <i class="fa {{ .IconClass }}"></i>
+              <a href="{{ .URL | absLangURL }}" {{ if and ( isset . "Name" ) ( ne .Name "" ) }} title="{{ .Name }}"{{ end }}>
+                {{ .Pre }}
+                {{ .Name }}
+              </a>
+            </li>
             {{ end }}
-
-            {{ .Name }}
-            </a>
-          </li>
-          {{ end }}
-        </ul>
+          </ul>
+        </div>
+        <!--/.nav-collapse -->
       </div>
-      <!--/.nav-collapse -->
-    </div>
-  </nav>
-
-</header>
+    </nav>
+  </header>
