--- a/layouts/partials/bloc/content/readlink.html
+++ b/layouts/partials/bloc/content/readlink.html
@@ -1,1 +1,1 @@
-<p class="lead"><a href="{{ .Permalink }}" class="btn btn-default">{{ .Site.Data.Strings.readmore }} &rarr;</a></p>
+<p class="lead"><a href="{{ .Permalink }}" class="btn btn-default">{{ i18n "readmore" }} &rarr;</a></p>
