--- a/layouts/partials/modules/site/link/menu.html
+++ b/layouts/partials/modules/site/link/menu.html
@@ -1,3 +1,3 @@
 {{ range .Site.Data.Menu }}
-<a href="{{ .URL | absURL }}"{{ if and ( isset . "Title" ) ( ne .Title "" ) }} title="{{ .Title }}"{{ end }}>{{ .Name }}</a>
+<a href="{{ .URL | absLangURL }}"{{ if and ( isset . "Title" ) ( ne .Title "" ) }} title="{{ .Title }}"{{ end }}>{{ .Name }}</a>
 {{ end }}
