--- a/layouts/partials/base/scripts.html
+++ b/layouts/partials/base/scripts.html
@@ -1,13 +1,16 @@
-{{ if isset .Site.Params "mailmunchid" }}
-<!-- MailMunch for https://blog.appernetic.io -->
+{{ if .Site.Params.mailmunchid }}
+<!-- MailMunch  -->
 <script src="//s3.amazonaws.com/mailmunch/static/site.js" id="mailmunch-script" data-mailmunch-site-id="{{ .Site.Params.mailmunchid }}" async="async"></script>
 {{ end }}
-{{ if isset .Site.Params "sumomeid" }}
+{{ if .Site.Params.sumomeid }}
 <!-- sumome -->
 <script src="//load.sumome.com/" data-sumo-site-id="{{ .Site.Params.sumomeid }}" async="async"></script>
 {{ end }}
 <script src="{{ "js/jquery.min.js" | absURL }}"></script>
 <script src="{{ "js/bootstrap.min.js" | absURL }}"></script>
+{{ if eq .Site.Params.switchlang true }}
+<script src="{{ "js/js.cookie.js" | absURL }}"></script>
+{{ end }}
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 <script src="/js/popover/angular-storage.min.js"></script>
 
@@ -44,23 +47,27 @@
 </script>
 {{ end }}
 <script>
-var ENABLE_POPOVER = {{.Site.Params.popover.enablepopover}}; // enable or disable popover: true/false.
-var EXPIRE_COOKIE = {{.Site.Params.popover.expirecookie}}; // show it again after number of days to visitor that has not subscribed.
-var SHOW_MODAL_TIMEOUT = {{.Site.Params.popover.showmodaltimeout}}; // show popover modal after time interval in milliseconds.
-var MOUSE_LEAVE = {{.Site.Params.popover.mouseleave}}; //show popover when mouse leaves window: true/false.
-var MODAL_SIZE = {{.Site.Params.popover.modalsize}}; //lg or sm. Empty is md. If phone is detected lg is used.
-var POST_URL = {{.Site.Params.popover.posturl}}; // post url, for example zapier hooks.
-var SIGNUP_HEADER = {{.Site.Params.popover.signupheader}};
-var HEADER_IMAGE = {{.Site.Params.popover.headerimage}};
-var IMG_DESCRIPTION = {{.Site.Params.popover.imagedescription}};
-var SIGNUP_TEXT = {{.Site.Params.popover.signuptext}};
-var INPUT_PLACEHOLDER = {{.Site.Params.popover.inputplaceholder}};
-var SUBMIT_BUTTON = {{.Site.Params.popover.submitbutton}};
-var SUCCESS_MESSAGE = {{.Site.Params.popover.successmessage}};
-var ERROR_MESSAGE = {{.Site.Params.popover.errormessage}};
-var OPTIN = {{.Site.Params.popover.optin}};
-var COOKIE_NAME = {{.Site.Params.popover.cookiename}};
+var ENABLE_POPOVER = {{.Site.Params.popover.enablepopover}}, // enable or disable popover: true/false.
+EXPIRE_COOKIE = {{.Site.Params.popover.expirecookie}}, // show it again after number of days to visitor that has not subscribed.
+SHOW_MODAL_TIMEOUT = {{.Site.Params.popover.showmodaltimeout}}, // show popover modal after time interval in milliseconds.
+MOUSE_LEAVE = {{.Site.Params.popover.mouseleave}}, //show popover when mouse leaves window: true/false.
+MODAL_SIZE = {{.Site.Params.popover.modalsize}}, //lg or sm. Empty is md. If phone is detected lg is used.
+POST_URL = {{.Site.Params.popover.posturl}}, // post url, for example zapier hooks.
+SIGNUP_HEADER = {{.Site.Params.popover.signupheader}},
+HEADER_IMAGE = {{.Site.Params.popover.headerimage}},
+IMG_DESCRIPTION = {{.Site.Params.popover.imagedescription}},
+SIGNUP_TEXT = {{.Site.Params.popover.signuptext}},
+INPUT_PLACEHOLDER = {{.Site.Params.popover.inputplaceholder}},
+SUBMIT_BUTTON = {{.Site.Params.popover.submitbutton}},
+SUCCESS_MESSAGE = {{.Site.Params.popover.successmessage}},
+ERROR_MESSAGE = {{.Site.Params.popover.errormessage}},
+OPTIN = {{.Site.Params.popover.optin}},
+COOKIE_NAME = {{.Site.Params.popover.cookiename}},
+CONTENTLANGUAGE = {{ .Site.Params.DefaultContentLanguage }}; // used in pathnamereplace.js
 </script>
+{{ if eq .Site.Params.switchlang true }}
+<script src="{{ "js/pathnamereplace.js" | absURL }}"></script>
+{{ end }}
 <script src="/js/popover/angular-modal-service.min.js"></script>
 <script src="/js/angular-ismobile.min.js"></script>
 <script src="/js/popover/popover.min.js"></script>
