Bundling angular.js

--- a/layouts/partials/base/scripts.html
+++ b/layouts/partials/base/scripts.html
@@ -11,7 +11,7 @@
 {{ if eq .Site.Params.switchlang true }}
 <script src="{{ "js/js.cookie.js" | absURL }}"></script>
 {{ end }}
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+<script src="{{ "js/angular.min.js" | absURL }}"></script>
 <script src="/js/popover/angular-storage.min.js"></script>
 <script src="{{ "js/highlight.pack.js" | absURL }}"></script>
 <script src="{{ "js/site.js" | absURL }}"></script>
