--- a/layouts/post/single.boot.html
+++ b/layouts/post/single.boot.html
@@ -1,4 +1,5 @@
 <footer>
+  {{ partial "bloc/content/sharing" . }}
   {{ partial "bloc/content/navigation" . }}
   {{ partial "bloc/content/comments" . }}
 </footer>
