--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -8,7 +8,7 @@
   {{ $data := .Data }}
   {{ range $key,$value := .Data.Terms.ByCount }}
     <li>
-      <a href="{{ $baseurl }}{{ $data.Plural }}/{{ $value.Name | urlize }}">
+      <a href="{{ $data.Plural | relLangURL }}/{{ $value.Name | urlize }}">
         {{ $value.Name }}
       </a>
       <strong>
