--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -1,5 +1,5 @@
-    {{ partial "base/footer" . }}
-    {{ partial "base/scripts" . }}
+    {{ partial "base/footer.html" . }}
+    {{ partial "base/scripts.html" . }}
 
 
 
