--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,7 @@
-{{ partial "head" . }}
+{{ partial "head.html" . }}
 <div id="main-content" class="container">
   <header>
-    {{ partial "bloc/content/h1-title" . }}
+    {{ partial "bloc/content/h1-title.html" . }}
   </header>
   <ul class="container content">
     {{ range $index, .Paginator.Pages }}
@@ -10,4 +10,4 @@
   </ul>
   {{ partial "bloc/content/pagination.html" . }}
 </div>
-{{ partial "foot" . }}
+{{ partial "foot.html" . }}
