--- a/layouts/_default/single.hat.html
+++ b/layouts/_default/single.hat.html
@@ -1,3 +1,3 @@
 <header class="container hat">
-  {{ partial "bloc/content/h1-title" . }}
+  {{ partial "bloc/content/h1-title.html" . }}
 </header>
