--- a/layouts/post/single.hat.html
+++ b/layouts/post/single.hat.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
   <div class="text-center">
 
-    {{ partial "bloc/content/h1-title" . }}
-    {{ partial "bloc/content/metas" . }}
+    {{ partial "bloc/content/h1-title.html" . }}
+    {{ partial "bloc/content/metas.html" . }}
   </div>
 </div>
