--- a/layouts/section/code.html
+++ b/layouts/section/code.html
@@ -1,11 +1,11 @@
-{{ partial "head" . }}
+{{ partial "head.html" . }}
 <section id="main-content" class="container main_content section">
   <header>
-    {{ partial "bloc/content/h1-title" . }}
+    {{ partial "bloc/content/h1-title.html" . }}
   </header>
   {{ range $index, .Paginator.Pages.ByTitle }}
     {{ .Render "section.li" }}
   {{ end }}
-  {{ partial "bloc/content/pagination" . }}
+  {{ partial "bloc/content/pagination.html" . }}
 </section>
-{{ partial "foot" . }}
+{{ partial "foot.html" . }}
