--- a/layouts/taxonomy/topic.html
+++ b/layouts/taxonomy/topic.html
@@ -1,11 +1,11 @@
-{{ partial "head" . }}
+{{ partial "head.html" . }}
 <section id="main-content" class="container main_content">
   <header class="container">
-    {{ partial "bloc/content/h1-title" . }}
+    {{ partial "bloc/content/h1-title.html" . }}
   </header>
   {{ range $index, $page := .Paginator.Pages }}
     {{ .Render "summary" }}
   {{ end }}
-  {{ partial "bloc/content/pagination" . }}
+  {{ partial "bloc/content/pagination.html" . }}
 </section>
-{{ partial "foot" . }}
+{{ partial "foot.html" . }}
