Upgrade to font-awesome 5
- replace styles/prefixes for icons that changed name
- add css that does not show body until svg's are rendered
- remove envelope css it had a typo anyway and white looks better

--- a/layouts/partials/base/scripts.html
+++ b/layouts/partials/base/scripts.html
@@ -8,6 +8,7 @@
 {{ end }}
 <script src="{{ "js/jquery.min.js" | absURL }}"></script>
 <script src="{{ "js/bootstrap.min.js" | absURL }}"></script>
+<script defer src="{{ "js/fontawesome-all.min.js" | absURL }}"></script>
 {{ if eq .Site.Params.switchlang true }}
 <script src="{{ "js/js.cookie.js" | absURL }}"></script>
 {{ end }}
