--- a/layouts/partials/modules/site/link/social/bitbucket.html
+++ b/layouts/partials/modules/site/link/social/bitbucket.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.bitbucket }}
 <a id="contact-link-bitbucket" class="contact_link" href="https://bitbucket.org/{{ . }}">
-  <span class="fa fa-bitbucket-square"></span><span>bitbucket</span></a>
+  <span class="fab fa-bitbucket"></span><span>bitbucket</span></a>
 {{ end }}
