--- a/layouts/partials/modules/site/link/social/rss.html
+++ b/layouts/partials/modules/site/link/social/rss.html
@@ -1,4 +1,4 @@
 {{ if .Site.Params.rss }}
 <a id="contact-link-rss" class="contact_link" href="{{ .RSSLink }}" type="application/rss+xml">
-  <span class="fa fa-rss-square"></span><span>rss</span></a>
+  <span class="fas fa-rss-square"></span><span>rss</span></a>
 {{ end }}
