--- a/layouts/partials/modules/site/link/social/github.html
+++ b/layouts/partials/modules/site/link/social/github.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.github }}
 <a id="contact-link-github" class="contact_link" href="https://github.com/{{ . }}">
-  <span class="fa fa-github-square"></span><span>github</span></a>
+  <span class="fab fa-github-square fa-fw"></span><span>github</span></a>
 {{ end }}
