--- a/layouts/post/single.boot.html
+++ b/layouts/post/single.boot.html
@@ -1,5 +1,7 @@
 <footer>
+  {{ if .Params.params.socialsharing true }}
   {{ partial "bloc/content/sharing.html" . }}
+  {{ end }}
   {{ partial "bloc/content/navigation.html" . }}
   {{ partial "bloc/content/comments.html" . }}
 </footer>
