--- a/layouts/partials/bloc/content/sidebar.html
+++ b/layouts/partials/bloc/content/sidebar.html
@@ -33,5 +33,8 @@
       </div>
       {{ end }}
     {{ end }}
+    <div class="section social">
+        {{ partial "modules/site/link/social" . }}
+    </div>
 
 </div>
