--- a/layouts/partials/modules/site/link/social.html
+++ b/layouts/partials/modules/site/link/social.html
@@ -1,5 +1,6 @@
 {{ partial "modules/site/link/social/email.html" . }}
 {{ partial "modules/site/link/social/github.html" . }}
+{{ partial "modules/site/link/social/gitlab.html" . }}
 {{ partial "modules/site/link/social/bitbucket.html" . }}
 {{ partial "modules/site/link/social/linkedin.html" . }}
 {{ partial "modules/site/link/social/googleplus.html" . }}
