--- a/layouts/partials/modules/site/link/social/facebook.html
+++ b/layouts/partials/modules/site/link/social/facebook.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.facebook }}
 <a id="contact-link-facebook" class="contact_link" href="https://www.facebook.com/{{ . }}">
-  <span class="fa fa-facebook-square"></span><span>facebook</span></a>
+  <i class="fa fa-facebook"></i></a>
 {{ end }}
