Added xing and slideshare, reworked parameters, added styles for asciidoc sources

--- a/layouts/partials/bloc/content/metas.html
+++ b/layouts/partials/bloc/content/metas.html
@@ -6,7 +6,7 @@
   {{ end }}
   &middot; {{ i18n "readinabout" . }}
   &middot; ({{ i18n "words" . }})
-  {{ if .Params.params.socialsharing true }}
+  {{ if .Site.Params.socialsharing }}
   <br /> {{ partial "bloc/content/sharing.html" . }}
   {{ end }}
   </small>
