--- a/layouts/partials/modules/site/link/social.html
+++ b/layouts/partials/modules/site/link/social.html
@@ -3,8 +3,10 @@
 {{ partial "modules/site/link/social/gitlab.html" . }}
 {{ partial "modules/site/link/social/bitbucket.html" . }}
 {{ partial "modules/site/link/social/linkedin.html" . }}
+{{ partial "modules/site/link/social/xing.html" . }}
 {{ partial "modules/site/link/social/googleplus.html" . }}
 {{ partial "modules/site/link/social/facebook.html" . }}
 {{ partial "modules/site/link/social/twitter.html" . }}
+{{ partial "modules/site/link/social/slideshare.html" . }}
 {{ partial "modules/site/link/social/youtube.html" . }}
 {{ partial "modules/site/link/social/rss.html" . }}
