--- a/layouts/partials/modules/site/link/social/linkedin.html
+++ b/layouts/partials/modules/site/link/social/linkedin.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.linkedin }}
-<a id="contact-link-linkedin" class="contact_link" href="fr.linkedin.com/in/{{ . }}">
+<a id="contact-link-linkedin" class="contact_link" href="https://linkedin.com/in/{{ . }}">
   <i class="fa fa-linkedin"></i></a>
 {{ end }}
