Changed mail integration in sidebar, only shown if email is set with social profiles

--- a/layouts/partials/modules/site/link/social/email.html
+++ b/layouts/partials/modules/site/link/social/email.html
@@ -1,4 +1,4 @@
-{{ with .Site.Author.email }}
+{{ with .Site.Params.email }}
 <a id="contact-link-email" class="contact_link" href="mailto:{{ . }}">
   <i class="fa fa-envelope"></i></a>
 {{ end }}
