Asciidoc tweaks for WARNING, NOTE and CAUTION

--- a/layouts/partials/modules/site/link/social/rss.html
+++ b/layouts/partials/modules/site/link/social/rss.html
@@ -1,4 +1,4 @@
 {{ if .Site.Params.rss }}
 <a id="contact-link-rss" class="contact_link" href="/index.xml" type="application/rss+xml">
-  <i class="fa fa-rss"></i></a>
+  <i class="fa fa-feed"></i></a>
 {{ end }}
