Added title to social profile icons

--- a/layouts/partials/modules/site/link/social/github.html
+++ b/layouts/partials/modules/site/link/social/github.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.github }}
-<a id="contact-link-github" class="contact_link" href="https://github.com/{{ . }}">
+<a title="My GitHub Profile" id="contact-link-github" class="contact_link" href="https://github.com/{{ . }}">
   <i class="fa fa-github"></i></a>
 {{ end }}
