--- a/layouts/partials/modules/site/link/social/googleplus.html
+++ b/layouts/partials/modules/site/link/social/googleplus.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.googleplus }}
-<a id="contact-link-googleplus" class="contact_link" href="https://plus.google.com/u/0/+{{ . }}">
+<a title="My Google+ Profile" id="contact-link-googleplus" class="contact_link" href="https://plus.google.com/u/0/+{{ . }}">
   <i class="fa fa-google-plus"></i></a>
 {{ end }}
