--- a/layouts/partials/modules/site/link/social/slideshare.html
+++ b/layouts/partials/modules/site/link/social/slideshare.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.slideshare }}
-<a id="contact-link-slideshare" class="contact_link" href="https://www.slideshare.net/{{ . }}">
+<a title="My Slideshare Profile" id="contact-link-slideshare" class="contact_link" href="https://www.slideshare.net/{{ . }}">
   <i class="fa fa-slideshare"></i></a>
 {{ end }}
