--- a/layouts/partials/modules/site/link/social/gitlab.html
+++ b/layouts/partials/modules/site/link/social/gitlab.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.gitlab }}
-<a id="contact-link-gitlab" class="contact_link" href="https://gitlab.com/{{ . }}">
+<a title="My Gitlab Profile" id="contact-link-gitlab" class="contact_link" href="https://gitlab.com/{{ . }}">
   <i class="fa fa-gitlab"></i></a>
 {{ end }}
