--- a/layouts/partials/modules/site/link/social/xing.html
+++ b/layouts/partials/modules/site/link/social/xing.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.xing }}
-<a id="contact-link-xing" class="contact_link" href="https://www.xing.com/profile/{{ . }}">
+<a id="contact-link-xing" title="My Xing profile" class="contact_link" href="https://www.xing.com/profile/{{ . }}">
   <i class="fa fa-xing"></i></a>
 {{ end }}
