--- a/layouts/partials/modules/site/link/social/youtube.html
+++ b/layouts/partials/modules/site/link/social/youtube.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.youtube }}
-<a id="contact-link-youtube" class="contact_link" href="https://www.youtube.com/channel/{{ . }}">
+<a title="My Youtube Profile" id="contact-link-youtube" class="contact_link" href="https://www.youtube.com/channel/{{ . }}">
   <i class="fa fa-youtube"></i></a>
 {{ end }}
