--- a/static/css/style.css
+++ b/static/css/style.css
@@ -153,3 +153,8 @@ div.caution td.content, div.warning td.content, div.note td.content {
 .admonitionblock.note td.content {
     background-color: lightyellow !important;
 }
+
+#pagination {
+    width: 100%;
+    text-align: center;
+}
