Added lunrjs search 1.0, problems with 2.3

--- a/layouts/partials/base/scripts.html
+++ b/layouts/partials/base/scripts.html
@@ -88,3 +88,19 @@ MathJax.Hub.Config({
 {{ range .Site.Params.customJS }}
 <script type="text/javascript" src="{{ . | absURL}}"></script>
 {{ end }}
+<script type="text/javascript" src="/js/search.js"></script>
+<script type="text/javascript">
+loadIndexJson(
+    addToSearchIndex(
+        searchIndex(),
+        registerSearchHandler(
+            document.getElementById('search-input'),
+            search(
+                renderSearchResults(
+                    document.getElementById('search-results')
+                )
+            )
+        )
+    )
+);
+</script>
