--- a/layouts/partials/base/imports.html
+++ b/layouts/partials/base/imports.html
@@ -22,3 +22,7 @@
 {{ else }}
   <link rel="stylesheet" href="{{ "css/highlight/" | absURL }}default.css">
 {{ end }}
+<!-- Add lunr cdn -->
+<!--script src="https://cdnjs.cloudflare.com/ajax/libs/lunr.js/2.3.0/lunr.min.js"></script-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lunr.js/1.0.0/lunr.min.js"></script>
+<script src="/js/search.js"></script>
