Added target=_blank to all socialicons in sidebar

--- a/layouts/partials/modules/site/link/social/bitbucket.html
+++ b/layouts/partials/modules/site/link/social/bitbucket.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.bitbucket }}
-<a title="My Bitbucket profile" id="contact-link-bitbucket" class="contact_link" href="https://bitbucket.org/{{ . }}">
+<a title="My Bitbucket profile" id="contact-link-bitbucket" class="contact_link" target="_blank" href="https://bitbucket.org/{{ . }}">
   <i class="fa fa-bitbucket"></i></a>
 {{ end }}
