--- a/layouts/partials/modules/site/link/social/facebook.html
+++ b/layouts/partials/modules/site/link/social/facebook.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.facebook }}
-<a title="My Facebook Profile" id="contact-link-facebook" class="contact_link" href="https://www.facebook.com/{{ . }}">
+<a title="My Facebook Profile" target="_blank" id="contact-link-facebook" class="contact_link" href="https://www.facebook.com/{{ . }}">
   <i class="fa fa-facebook"></i></a>
 {{ end }}
