--- a/layouts/partials/modules/site/link/social/rss.html
+++ b/layouts/partials/modules/site/link/social/rss.html
@@ -1,4 +1,4 @@
 {{ if .Site.Params.rss }}
-<a title="RSS Feed of this blog" id="contact-link-rss" class="contact_link" href="/index.xml" type="application/rss+xml">
+<a title="RSS Feed of this blog" target="_blank" id="contact-link-rss" class="contact_link" href="/index.xml" type="application/rss+xml">
   <i class="fa fa-feed"></i></a>
 {{ end }}
