--- a/layouts/partials/modules/site/link/social/twitter.html
+++ b/layouts/partials/modules/site/link/social/twitter.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.twitter }}
-<a title="My Twitter profile" id="contact-link-twitter" class="contact_link" href="https://twitter.com/{{ . }}">
+<a title="My Twitter profile" target="_blank" id="contact-link-twitter" class="contact_link" href="https://twitter.com/{{ . }}">
   <i class="fa fa-twitter"></i></a>
 {{ end }}
