--- a/layouts/partials/bloc/content/sidebar.html
+++ b/layouts/partials/bloc/content/sidebar.html
@@ -1,6 +1,9 @@
 {{ if .Site.Params.showSearchInSidebar }}
 {{ partial "modules/page/search.html" . }}
 {{ end }}
+{{ if .Site.Params.showBMC }} 
+{{ partial "modules/page/bmc.html" }} 
+{{ end }} 
 <div>
   {{ if and .IsPage (eq .Params.toc true) }}
     <div class="section">
