Renamed to ko-fi
Changed logic

--- a/layouts/partials/bloc/content/sidebar.html
+++ b/layouts/partials/bloc/content/sidebar.html
@@ -1,9 +1,7 @@
 {{ if .Site.Params.showSearchInSidebar }}
 {{ partial "modules/page/search.html" . }}
 {{ end }}
-{{ if .Site.Params.showBMC }} 
-{{ partial "modules/page/bmc.html" }} 
-{{ end }} 
+{{ partial "modules/page/ko-fi.html" }} 
 <div>
   {{ if and .IsPage (eq .Params.toc true) }}
     <div class="section">
