--- a/layouts/partials/modules/page/search.html
+++ b/layouts/partials/modules/page/search.html
@@ -1,4 +1,4 @@
 {{ if .Site.Params.showSearchInSidebar }}
-<p><input id="search-input" type="text" onfocus="this.value=''" value="search" /></p>
+<div id="search"><input id="search-input" type="text" onfocus="this.value=''" value="search" /></div>
 <div id="search-results"></div>
 {{ end }}
