--- a/layouts/partials/modules/page/kofi.html
+++ b/layouts/partials/modules/page/kofi.html
@@ -1,6 +1,5 @@
-<!-- Cache Test -->
 {{ with .Site.Params.kofi }}
 <div id="ko-fi">
-    <a href="https://ko-fi.com/{{ . }}" target="_blank"><img height="36" style="border:0px;height:36px;" src="https://az743702.vo.msecnd.net/cdn/kofi2.png?v=0" border="0" alt="Buy Me a Beer at ko-fi.com" /></a>
+    <a href="https://ko-fi.com/{{ .  }}" target="_blank"><button type="button" class="btn btn-primary"><i class="fa fa-beer"></i> Buy me a Beer</button></a>
 </div>
 {{ end }}
