--- a/static/css/style.css
+++ b/static/css/style.css
@@ -171,6 +171,16 @@ div.caution td.content, div.warning td.content, div.note td.content {
     display: none;
 }
 
+#search {
+    text-align: center;
+}
+
+#ko-fi {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
 #search-results {
     padding: 10px;
     background-color: white;
