Some minor changes to Ko-Fi

--- a/layouts/partials/modules/page/kofi.html
+++ b/layouts/partials/modules/page/kofi.html
@@ -1,5 +1,5 @@
 {{ with .Site.Params.kofi }}
 <div id="ko-fi">
-    <a href="https://ko-fi.com/{{ .  }}" target="_blank"><button type="button" class="btn btn-primary"><i class="fa fa-beer"></i> Buy me a Beer</button></a>
+    <a href="https://ko-fi.com/{{ .  }}" target="_blank"><button type="button" class="btn btn-link">Buy me a <i class="fa fa-coffee"></i> Coffee or <i class="fa fa-beer"></i> Beer</button></a><br />
 </div>
 {{ end }}
