--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -3,6 +3,7 @@
   <header>
     {{ partial "bloc/content/h1-title.html" . }}
   </header>
+  {{ .Content }}
   {{ range $index, $foo := .Paginator.Pages  }}
     {{ .Render "section.li" }}
   {{ end }}
