prepare for hugo future version
fix some issues possible to be in hugo future version and add commento support.

--- a/layouts/partials/base/metas.html
+++ b/layouts/partials/base/metas.html
@@ -64,10 +64,10 @@
   {{ end }}
 {{ end }}
 
-{{ if .RSSLink }}
-<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />
+{{ with .Site.Home.AlternativeOutputFormats.Get "RSS" }}
+<link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
 {{ end }}
 <link rel="canonical" href="{{ .Permalink }}" />
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/touch-icon-144-precomposed.png">
 <link rel="icon" href="/favicon.png">
-{{ .Hugo.Generator }}
+{{ hugo.Generator }}
