--- a/layouts/partials/bloc/content/comments.html
+++ b/layouts/partials/bloc/content/comments.html
@@ -1,3 +1,4 @@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
   {{ partial "modules/disqus.html" . }}
+  {{ partial "modules/commento.html" . }}
 </div>
